--- a/res/layout/add_and_edit.xml
+++ b/res/layout/add_and_edit.xml
@@ -4,34 +4,37 @@
     android:layout_height="match_parent" >
 
     <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/add_and_edit_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"/>
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="wrap_content" 
+            android:lines="1"
+            android:hint="John Dow"
             android:ems="10" >
 
             <requestFocus />
         </EditText>
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/phonenumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:lines="1"
+            android:hint="555555555"
             android:ems="10"
             android:inputType="phone" />
-
     </LinearLayout>
 
 </RelativeLayout>
